# Journal-App

./: docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/backend/: settings.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  Home.tsx  Navigation.css  Navigation.tsx  StatsPage.tsx  TrackersPage.tsx  utils.tsx
frontend/src/Authentication/: Auth.tsx  AuthPage.css  AuthPage.tsx  AuthenticationUtils.tsx  Login.tsx  Signup.tsx  utils.tsx
frontend/src/Home/: DateController.tsx  DisplayDay.tsx  DisplayMonth.tsx  DisplayWeek.tsx  HomePage.css  HomePage.tsx  HomeUtils.tsx
frontend/src/JournalPrompt/: ExistingPrompts.tsx  JournalPromptPage.tsx  JournalPromptUtils.tsx  NewPrompt.tsx  Prompt.tsx
