[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Anton Roman Young <89807629+antonryoung02@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
